{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 131,
  "lineage": "ed2b0870-e307-f21e-ec1d-d7d231e55dd9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-041d265258e800105",
            "arn": "arn:aws:ec2:us-east-1:772992660467:instance/i-06b67bce5c24c7e50",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06b67bce5c24c7e50",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tfkey55",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb46d50db06fe92b",
            "private_dns": "ip-10-0-0-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.243",
            "public_ip": "54.224.20.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bac10d84b8de0128",
                "volume_size": 2,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0109a1896adea4f4f",
            "tags": {
              "Name": "AGH-terraform-ec2"
            },
            "tags_all": {
              "Name": "AGH-terraform-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04e20b78e32f3bce0"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.sec-grp",
            "aws_subnet.subnet-test",
            "aws_vpc.vpc",
            "data.aws_ami.amazon-machine-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772992660467:internet-gateway/igw-0fc1f7a8480f3a25d",
            "id": "igw-0fc1f7a8480f3a25d",
            "owner_id": "772992660467",
            "tags": {
              "Name": "AGH-igw"
            },
            "tags_all": {
              "Name": "AGH-igw"
            },
            "vpc_id": "vpc-0ee985b2bc16079bd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772992660467:route-table/rtb-0528dc3f7a4b7d4d3",
            "id": "rtb-0528dc3f7a4b7d4d3",
            "owner_id": "772992660467",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc1f7a8480f3a25d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AGH-rt"
            },
            "tags_all": {
              "Name": "AGH-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee985b2bc16079bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd86f1afd3bb49ce",
            "route_table_id": "rtb-0528dc3f7a4b7d4d3",
            "subnet_id": "subnet-0109a1896adea4f4f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route-table",
            "aws_subnet.subnet-test",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772992660467:security-group/sg-04e20b78e32f3bce0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e20b78e32f3bce0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "45.242.158.21/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "AGH-sec-grp",
            "name_prefix": "",
            "owner_id": "772992660467",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AGH-sec-grp"
            },
            "tags_all": {
              "Name": "AGH-sec-grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee985b2bc16079bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772992660467:subnet/subnet-0109a1896adea4f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109a1896adea4f4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "772992660467",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "AGH-subnet"
            },
            "tags_all": {
              "Name": "AGH-subnet"
            },
            "vpc_id": "vpc-0ee985b2bc16079bd"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:772992660467:vpc/vpc-0ee985b2bc16079bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b08ad0080dc9c603",
            "default_route_table_id": "rtb-056660a46a36c1502",
            "default_security_group_id": "sg-025fa2e57fb0f1c45",
            "dhcp_options_id": "dopt-00036e2ab0e64f334",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ee985b2bc16079bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056660a46a36c1502",
            "owner_id": "772992660467",
            "tags": {
              "Name": "AGH-vpc"
            },
            "tags_all": {
              "Name": "AGH-vpc"
            }
          }
        }
      ]
    }
  ]
}